# scrappy

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: azure-deploy.yaml
african-data-layer-poc/: .env.example  docker-compose.yml
african-data-layer-poc/ai-qa-service/: Dockerfile  ai_qa_service.py
african-data-layer-poc/cleaning-service/: Dockerfile  cleaning_service.py
african-data-layer-poc/devops/k8s/: README.md  minio.yaml  services.yaml
african-data-layer-poc/ingestion-service/: Dockerfile  ingestion_service.py  mock_loaders.py
african-data-layer-poc/query-api-service/: Dockerfile  query_api_service.py
african-data-layer-poc/scripts/: bootstrap_minio.py  run_demo.sh
african-data-layer-poc/shared/: __init__.py  config.py  logging_utils.py  minio_client.py  models.py  retry.py  shutdown.py
ai-qa-service/: Dockerfile  main.py  requirements.txt
configs/: datasets.yaml  example_dataset.yaml
docs/: african-data-layer-poc.md  codebase-reference.md
docs/architecture/: overview.md
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/env/: dev.tfvars
infra/terraform/modules/acr/: main.tf  (+1 more)
k8s/env/: datasets.yaml  values-dev.yaml
k8s/helm/african-data-layer/: Chart.yaml  values.yaml
pipeline-runner/: Dockerfile  pyproject.toml
query-api-service/: Dockerfile  main.py  requirements.txt
query-api-service/app/: __init__.py  auth.py  cache.py  config.py  data.py  dependencies.py  models.py
query-api-service/app/routers/: __init__.py  analytics.py  health.py  prices.py  providers.py  realestate.py
query-api-service/tests/: test_auth.py  test_cache_and_data.py  test_routers.py
scraper-service/: Dockerfile  requirements.txt
scraper-service/app/: main.py
scripts/: 00_prereqs_check.sh  01_bootstrap_login.sh  02_provision_infra.sh  03_build_and_push_images.sh  04_connect_kubectl.sh  05_install_csi_workload_identity.sh  06_deploy_apps.sh  07_validate.sh  99_destroy.sh
src/africa_datalayer/: __init__.py  config.py  storage.py
src/africa_datalayer/pipelines/: __init__.py  cleanse.py  ingest.py
src/africa_datalayer/scripts/: __init__.py  ingest_and_cleanse.py
src/africa_datalayer/utils/: __init__.py  checksum.py  frame.py
tests/: test_cleanse.py  test_ingest.py  test_storage.py
(+34 files in other folders)
