[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africa-datalayer"
version = "0.1.0"
description = "Scaffolding for an African data lakehouse ingestion and cleansing pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "scrappy", email = "team@example.com"}]
dependencies = [
    "boto3>=1.34",
    "duckdb>=0.10",
    "pandas>=2.2",
    "pandera>=0.18",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "requests>=2.31"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
africa-datalayer = "africa_datalayer.scripts.ingest_and_cleanse:main"

[tool.setuptools.packages.find]
where = ["src"]
