[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africa-datalayer"
version = "0.1.0"
description = "Scaffolding for an African data lakehouse ingestion and cleansing pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "scrappy", email = "team@example.com"}]
dependencies = [
    "azure-identity>=1.17",
    "azure-storage-blob>=12.21",
    "boto3>=1.34",
    "duckdb>=0.10",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pandas>=2.2",
    "pandera>=0.18",
    "pydantic>=2.6",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "requests>=2.31",
    "typer>=0.12",
    "uvicorn[standard]>=0.29",
    "beautifulsoup4>=4.12"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
africa-datalayer = "africa_datalayer.scripts.ingest_and_cleanse:main"

[tool.setuptools.packages.find]
where = ["src"]
