[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "africa-datalayer-pipeline"
version = "0.1.0"
description = "Placeholder pipeline runner for the Africa Data Layer"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "scrappy", email = "team@example.com" }]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
africa-datalayer = "africa_datalayer.scripts.ingest_and_cleanse:main"

[tool.setuptools.packages.find]
where = ["src"]
